⚙️ cleaning session ---------------------------------------- mostly tags and console refact ----------------------------------------

--- a/atkm/src/app/features/landing/landing.component.html
+++ b/atkm/src/app/features/landing/landing.component.html
@@ -41,7 +41,8 @@
       [accountData]="bashAccountData()" (configChange)="onBashConfigChange($event)"
       (togglePanel)="toggleBashConfigPanel()" /> -->
 
-    <atk-sidebar-bash-config (configChange)="onBashConfigChange($event)" (togglePanel)="toggleBashConfigPanel()" />
+    <atk-sidebar-bash-config [isCollapsed]="config.configPanel.isCollapsed" (configChange)="onBashConfigChange($event)"
+      (togglePanel)="toggleConfigPanel()" />
 
   </div>
 </div>
