💥bomb session ---------------------------------------- where am i ! ----------------------------------------

--- a/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
+++ b/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
@@ -29,7 +29,7 @@
   <div class="terminal-main">
     <!-- Informations générales -->
     <div class="terminal-section">
-      <div class="terminal-content">
+      <div class="section-content">
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
         <atk-bash configId="binance-debug-v2" [autoLoad]="true" (configRequest)="onBashConfigRequest($event)"
           (dataLoaded)="onBashDataLoaded($event)" (errorOccurred)="onBashError($event)" />
