--- a/atkm/src/app/features/binance/components/binance-debug.component.html
+++ b/atkm/src/app/features/binance/components/binance-debug.component.html
@@ -8,7 +8,7 @@
 
   <main class="terminal-main">
     <div class="terminal-section">
-      <div class="terminal-content">
+      <div class="section-content">
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
 
         <!-- Status bar now handled by directive -->
