--- a/atkm/src/app/shared/components/atk-api-management/atk-api-management.component.css
+++ b/atkm/src/app/shared/components/atk-api-management/atk-api-management.component.css
@@ -28,7 +28,7 @@
   background: var(--color-canvas-subtle);
 }
 
-.terminal-content {
+.section-content {
   height: 100%;
   position: relative;
 }
